--- a/assignment_3_scalar_and_prime/scalar/Makefile
+++ b/assignment_3_scalar_and_prime/scalar/Makefile
@@ -4,7 +4,7 @@ main: main.o
 	gcc -o main main.o
 
 main.o: main.c
-	gcc -c -o main.o main.c
+	gcc -c -g -o main.o main.c
 
 clean:
 	rm -f main.o main
